# FHL_MCP_SERVER

./: .gitignore  CHANGELOG.md  FHL_BIBLE_MCP_PLANNING.md  LICENSE  README.md  README_SERVER.md  TESTING_REPORT.md  batch_prompts_templates.py  batch_refactor.py  config.example.json  pyproject.toml  quick_refactor_batch1.py  quick_refactor_batch2.py  test_api_client.py  test_commentary_response.py  verify_all_19_prompts.py  verify_all_p1.py  verify_basic_tool_reference.py  verify_character_study.py  verify_p1_midpoint.py  verify_reading_passage.py  verify_uri_demo.py
docs/: API.md  API_PARAMETER_FIX.md  BUG_FIX_PLAN.md  BUG_FIX_PROGRESS.md  BUG_FIX_SUMMARY.md  DEVELOPER_GUIDE.md  DOCS_LINKS_UPDATE_REPORT.md  DOCS_ORGANIZATION_REPORT.md  DOCS_PROJECT_COMPLETION_SUMMARY.md  DOCS_TEXT_REFERENCES_UPDATE_REPORT.md  EXAMPLES.md  INSTALLATION_GUIDE.md  PHASE_3_2_COMPLETION.md  PHASE_3_3_COMPLETION.md  PHASE_4_1_TESTING_REPORT.md  PHASE_4_2_DOCUMENTATION_COMPLETE.md  PHASE_4_2_E2E_SUMMARY.md  PHASE_4_2_FINAL_REPORT.md  PROJECT_PROGRESS.md  PROMPTS_COMPLETE_REFACTORING_REPORT.md  PROMPTS_ENHANCEMENT_PLAN.md  PROMPTS_IMPROVEMENT_PLAN.md  PROMPTS_PHASE1_COMPLETION_REPORT.md  PROMPTS_PHASE2_COMPLETION_REPORT.md  PROMPTS_PHASE3_COMPLETION_REPORT.md  PROMPTS_QUICK_REFERENCE.md  PROMPTS_REFACTORING_REPORT.md  PROMPTS_REFACTORING_SUMMARY.md  PROMPTS_USAGE_GUIDE.md  PROMPT_P0_FIX_COMPLETION_REPORT.md  PROMPT_P1_REFACTORING_REPORT.md  QUICK_REFERENCE.md  README.md  REFACTORING_TOOLS_ORGANIZATION.md  TESTING_REPORT.md  test_summary.txt
docs/1_development/: DEVELOPER_GUIDE.md  FHL_BIBLE_MCP_PLANNING.md  INSTALLATION_GUIDE.md  PHASE_3_SUMMARY.md  PHASE_4_2_DOCUMENTATION_COMPLETE.md  PROJECT_PROGRESS.md  README.md  README_CACHE.md
docs/2_prompts_enhancement/: PROMPTS_ENHANCEMENT_PLAN.md  PROMPTS_PHASE2_COMPLETION_REPORT.md  PROMPTS_PHASE4_COMPLETION_REPORT.md  PROMPTS_USAGE_GUIDE.md  README.md
docs/3_prompts_improvement/: PROMPTS_COMPLETE_REFACTORING_REPORT.md  PROMPTS_DIAGNOSTIC_REPORT.md  PROMPTS_IMPROVEMENT_PLAN.md  PROMPTS_REFACTORING_REPORT.md  PROMPTS_REFACTORING_SUMMARY.md  PROMPT_P0_FIX_COMPLETION_REPORT.md  PROMPT_P1_MIDPOINT_REPORT.md  README.md  (+1 more)
scripts/: README.md  generate_config.py  install.bat  install.sh  quick_check.py  verify_setup.py
tests/: check_search_format.py  test_api_endpoints.py  test_apocrypha.py  test_apocrypha_detailed.py  test_apocrypha_quick.py  test_apocrypha_versions.py  test_apostolic_fathers.py  test_articles.py  test_footnotes.py  test_phase1_prompts.py  test_phase2_prompts.py  test_phase3_prompts.py  test_phase4_prompts.py  test_prompts_diagnostics.py  test_prompts_refactoring.py  test_search_bible_numbers.py  test_strongs_api.py  test_strongs_enhanced.py  test_strongs_quick_verify.py
(+160 files in other folders)
